{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 882,
  "lineage": "b4755e38-44ca-35ce-b4e3-5da578f7187e",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mtc_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:listener/app/meet-loadbalancer/a1d10ef8f30c9706/b88062fa6f27fba3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:targetgroup/meet-lb-tg-dcd/c7d4f1f0aa8fbb67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:843728461002:listener/app/meet-loadbalancer/a1d10ef8f30c9706/b88062fa6f27fba3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:loadbalancer/app/meet-loadbalancer/a1d10ef8f30c9706",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancing.aws_lb.mtc_lb",
            "module.loadbalancing.aws_lb_target_group.mtc_tg",
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mtc_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:loadbalancer/app/meet-loadbalancer/a1d10ef8f30c9706",
            "arn_suffix": "app/meet-loadbalancer/a1d10ef8f30c9706",
            "desync_mitigation_mode": "defensive",
            "dns_name": "meet-loadbalancer-1011212732.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:843728461002:loadbalancer/app/meet-loadbalancer/a1d10ef8f30c9706",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "meet-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ceaca374db0428b3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005dc421526580cfa"
              },
              {
                "subnet_id": "subnet-0e8ea613d440d5a82"
              }
            ],
            "subnets": [
              "subnet-005dc421526580cfa",
              "subnet-0e8ea613d440d5a82"
            ],
            "vpc_id": "vpc-06bbb8501f6d2f01a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.networking.aws_security_group.meet_public_sg",
            "module.networking.aws_subnet.meetsheth_public",
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mtc_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:listener/app/meet-loadbalancer/a1d10ef8f30c9706/b88062fa6f27fba3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:targetgroup/meet-lb-tg-dcd/c7d4f1f0aa8fbb67",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:843728461002:listener/app/meet-loadbalancer/a1d10ef8f30c9706/b88062fa6f27fba3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:loadbalancer/app/meet-loadbalancer/a1d10ef8f30c9706",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancing.aws_lb.mtc_lb",
            "module.loadbalancing.aws_lb_target_group.mtc_tg",
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mtc_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:843728461002:targetgroup/meet-lb-tg-dcd/c7d4f1f0aa8fbb67",
            "arn_suffix": "targetgroup/meet-lb-tg-dcd/c7d4f1f0aa8fbb67",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 10,
                "interval": 25,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:843728461002:targetgroup/meet-lb-tg-dcd/c7d4f1f0aa8fbb67",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "meet-lb-tg-dcd",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "meet_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:route-table/rtb-0f0e41a58359f96a2",
            "default_route_table_id": "rtb-0f0e41a58359f96a2",
            "id": "rtb-0f0e41a58359f96a2",
            "owner_id": "843728461002",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "meet_private"
            },
            "tags_all": {
              "Name": "meet_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "meet_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:internet-gateway/igw-043fec30bcc00f9a8",
            "id": "igw-043fec30bcc00f9a8",
            "owner_id": "843728461002",
            "tags": {
              "Name": "meet_igw"
            },
            "tags_all": {
              "Name": "meet_igw"
            },
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-043fec30bcc00f9a8",
            "id": "r-rtb-0cccf4a453b9191441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cccf4a453b919144",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.meet_internet_gateway",
            "module.networking.aws_route_table.meet_public_rt",
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "meet_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:route-table/rtb-0cccf4a453b919144",
            "id": "rtb-0cccf4a453b919144",
            "owner_id": "843728461002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043fec30bcc00f9a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "meet_public_rt"
            },
            "tags_all": {
              "Name": "meet_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mtc_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a280e963ab208891",
            "route_table_id": "rtb-0cccf4a453b919144",
            "subnet_id": "subnet-005dc421526580cfa"
          },
          "dependencies": [
            "module.networking.aws_route_table.meet_public_rt",
            "module.networking.aws_subnet.meetsheth_public",
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1c99a888bdb1d96",
            "route_table_id": "rtb-0cccf4a453b919144",
            "subnet_id": "subnet-0e8ea613d440d5a82"
          },
          "dependencies": [
            "module.networking.aws_route_table.meet_public_rt",
            "module.networking.aws_subnet.meetsheth_public",
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "meet_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:security-group/sg-0ceaca374db0428b3",
            "description": "public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ceaca374db0428b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "meet_public_sg",
            "name_prefix": "",
            "owner_id": "843728461002",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "meetsheth_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:subnet/subnet-0c5debfe35debf5dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5debfe35debf5dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843728461002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "meetsheth_private_1"
            },
            "tags_all": {
              "Name": "meetsheth_private_1"
            },
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:subnet/subnet-0fe2678753c3846b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2678753c3846b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "843728461002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "meetsheth_private_2"
            },
            "tags_all": {
              "Name": "meetsheth_private_2"
            },
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "meetsheth_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:subnet/subnet-005dc421526580cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005dc421526580cfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843728461002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "meetsheth_public_1"
            },
            "tags_all": {
              "Name": "meetsheth_public_1"
            },
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:subnet/subnet-0e8ea613d440d5a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8ea613d440d5a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "843728461002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "meetsheth_public_2"
            },
            "tags_all": {
              "Name": "meetsheth_public_2"
            },
            "vpc_id": "vpc-06bbb8501f6d2f01a"
          },
          "dependencies": [
            "module.networking.aws_vpc.meet_sheth_vpc",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.public_az"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "meet_sheth_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843728461002:vpc/vpc-06bbb8501f6d2f01a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0249cfc361adce3d0",
            "default_route_table_id": "rtb-0f0e41a58359f96a2",
            "default_security_group_id": "sg-09799f3827164f5d7",
            "dhcp_options_id": "dopt-5e82c726",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bbb8501f6d2f01a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f0e41a58359f96a2",
            "owner_id": "843728461002",
            "tags": {
              "Name": "meet_sheth_vpc"
            },
            "tags_all": {
              "Name": "meet_sheth_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}